gccida/c1/expand_mult
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2809:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_mult( machine_mode mode, rtx op0, rtx op1, rtx target, int unsignedp) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2813:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2839:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2841:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2845:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2849:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2852:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2855:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v51; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2858:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v54; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2862:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2867:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 *v63; // rax 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2890:13: error: must use 'enum' tag to refer to type 'mode_class'
&& *( const mode_class *)( ( char *)mode_class_0 + ( ( v10 >> 14) & 0x3FC)) == MODE_INT 
            ^
            enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2890:37: error: use of undeclared identifier 'mode_class_0'
&& *( const mode_class *)( ( char *)mode_class_0 + ( ( v10 >> 14) & 0x3FC)) == MODE_INT 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/expmed.c:2900:60: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( unsignedp || !flag_trapv || ( v63 = optab_table + 40, mode_class_0[v12] != MODE_INT) ) 
                                                           ^~~~~~~~~~~~
                                                           mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_mult/src/obj/expmed.o] Error 1
